@@ -1,0 +1,4 @@
+<div class="image-panel" id="panel-{ID}">
+   <p>{MESSAGE}</p>
+   <ul><li>{CHOICES}</li></ul>
+</div>
