@@ -148,3 +148,20 @@ div#folder-title {
     opacity : .2;
 }
 
+.image-panel {
+    padding : 3px;
+    font-size : 10px;
+    text-align : left;
+    float : right;
+    border : 1px solid black;
+    position : absolute;
+    background-color : white;
+    max-width : 180px;
+    display : none;   
+}
+
+.image-panel ul {
+    margin : 0px;
+    padding : 0px;
+    padding-left : 1.5em;
+}
